add: icons & advantages

--- a/.eslintrc
+++ b/.eslintrc
@@ -74,7 +74,13 @@
           1
         ],
         "@typescript-eslint/no-explicit-any": "warn",
-        "@typescript-eslint/no-var-requires": "warn"
+        "@typescript-eslint/no-var-requires": "warn",
+        "prettier/prettier": [
+          "error",
+          {
+            "endOfLine": "auto"
+          }
+        ]
       }
     }
   ]
